Changed single line of code to accomodate outdated language of autograder.